--- a/ReceptAI.API/ReceptAI.API.csproj
+++ b/ReceptAI.API/ReceptAI.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,15 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.17" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Include="Rystem.OpenAi" Version="3.3.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ReceptAI.Infrastructure\ReceptAI.Infrastructure.csproj" />
     <ProjectReference Include="..\ReceptAI.Core\ReceptAI.Core.csproj" />
+    <ProjectReference Include="..\ReceptAI.Infrastructure\ReceptAI.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
