--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,25 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- main
+- backend-feature
 
 pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- checkout: self  # Checks out the source code of the repository
 
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    sudo apt-get update
+    sudo apt-get install -y wget
+    wget https://dot.net/v1/dotnet-install.sh
+    chmod +x dotnet-install.sh
+    ./dotnet-install.sh --version 7.0
+  displayName: 'Setup .NET 7.0'
+
+- script: dotnet restore ReceptAI.sln
+  displayName: 'Restore dependencies'
+
+- script: dotnet build ReceptAI.sln --no-restore -c Release
+  displayName: 'Build the solution'
+
+- script: dotnet test ReceptAI.sln --no-build -c Release --verbosity normal
+  displayName: 'Run tests'
