--- a/.github /workflows/backend.yml
+++ b/.github /workflows/backend.yml
@@ -1,13 +1,15 @@
-name: Feature Branch CI
+name: backend
 
 on:
-  push:
+  pull_request:
     branches:
       - backend
+    types: [closed]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
