--- a/.github/workflows/backend-feature.yml
+++ b/.github/workflows/backend-feature.yml
@@ -3,7 +3,11 @@ name: Feature Branch CI
 on:
   push:
     branches:
-      - backend-feature
+      - backend-feature  # Trigger CI only for backend-feature branch
+
+env:
+  DOTNET_VERSION: '7.0'  # Centralized .NET version
+  SOLUTION_NAME: 'ReceptAI.sln'  # Define the solution name here for centralized management
 
 jobs:
   build-and-test:
@@ -13,15 +17,23 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Setup .NET
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v1.8.2  # Use a specific version for consistency
         with:
-          dotnet-version: '7.0'
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      - name: Cache NuGet packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/${{ env.SOLUTION_NAME }}') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
 
       - name: Restore dependencies
-        run: dotnet restore ReceptAI.sln 
+        run: dotnet restore ${{ env.SOLUTION_NAME }}
 
       - name: Build
-        run: dotnet build ReceptAI.sln --no-restore -c Release
+        run: dotnet build ${{ env.SOLUTION_NAME }} --no-restore -c Release
 
       - name: Run tests
-        run: dotnet test ReceptAI.sln --no-build -c Release --verbosity normal
+        run: dotnet test ${{ env.SOLUTION_NAME }} --no-build -c Release --verbosity normal
