--- a/.github/workflows/backend-feature.yml
+++ b/.github/workflows/backend-feature.yml
@@ -3,11 +3,11 @@ name: Feature Branch CI
 on:
   push:
     branches:
-      - backend-feature  # Trigger CI only for backend-feature branch
+      - backend-feature
 
 env:
-  DOTNET_VERSION: '7.0'  # Centralized .NET version
-  SOLUTION_NAME: 'ReceptAI.sln'  # Define the solution name here for centralized management
+  DOTNET_VERSION: '7.0'
+  SOLUTION_NAME: 'ReceptAI.sln'
 
 jobs:
   build-and-test:
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Setup .NET
-        uses: actions/setup-dotnet@v1.8.2  # Use a specific version for consistency
+        uses: actions/setup-dotnet@v1.8.2
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
