--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   intl: ^0.19.0
+  dio: ^5.4.3+1
+  native_flutter_proxy: ^0.1.15
 
 dev_dependencies:
   flutter_test:
