--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,11 @@ dependencies:
   intl: ^0.19.0
   dio: ^5.4.3+1
   native_flutter_proxy: ^0.1.15
+  mockito: ^5.4.4
+  build_runner: ^2.4.9
+  test: 1.24.9
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_lints: ^2.0.0
 
 flutter:
